# Soft-Card-Deck

./: .editorconfig  .gitignore  .hooks4git.ini  .uncrustify.cfg  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/constants/: Card_Constants.cpp  Card_Constants.h
src/models/Board/: Board.cpp  Board.h
src/models/Card/: Card.cpp  Card.h
src/models/Deck/: Deck.cpp  Deck.h
src/utils/UUID/: UUID.cpp  UUID.h
src/views/Board/: Board.cpp  Board.h
src/views/Card/: Card.cpp  Card.h
src/views/Deck/: Deck.cpp  Deck.h
